--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-ticker": "^1.3.1",
+    "redux": "^4.1.2",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
