--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
+    "mockserver": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-ticker": "^1.3.1",
     "redux": "^4.1.2",
@@ -27,13 +29,16 @@
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yargs": "^17.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test1": "echo \"Error: no test specified\" && exit 1",
+    "mockAPI": "node mocks/index.js add --portAPI=9001"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.24"
+    "@types/styled-components": "^5.1.24",
+    "cross-env": "^7.0.3"
   }
 }
